Next release
============

- Allow ``repoze.bfg.traversal.find_interface`` API to use a class
  object as the argument to compare against the ``model`` passed in.
  This means you can now do ``find_interface(model, SomeClass)`` and
  the first object which is found in the lineage which has
  ``SomeClass`` as its class (or the first object found which has
  ``SomeClass`` as any of its superclasses) will be returned.

- Fixed documentation bugs related to forget and remember in security API
  docs.

1.0.1 (2009-07-22)
==================

- Added support for ``has_resource``, ``resource_isdir``, and
  ``resource_listdir`` to the resource "OverrideProvider"; this fixes
  a bug with a symptom that a file could not be overridden in a
  resource directory unless a file with the same name existed in the
  original directory being overridden.

- Fixed documentation bug showing invalid test for values from the
  ``matchdict``:  they are stored as attributes of the ``Article``, rather
  than subitems.

- Fixed documentation bug showing wrong environment key for the ``matchdict``
  produced by the matching route.

- Added a workaround for a bug in Python 2.6, 2.6.1, and 2.6.2 having
  to do with a recursion error in the mimetypes module when trying to
  serve static files from Paste's FileApp:
  http://bugs.python.org/issue5853.  Symptom: File
  "/usr/lib/python2.6/mimetypes.py", line 244, in guess_type return
  guess_type(url, strict) RuntimeError: maximum recursion depth
  exceeded.  Thanks to Armin Ronacher for identifying the symptom and
  pointing out a fix.

- Minor edits to tutorials for accuracy based on feedback.

- Declared Paste and PasteDeploy dependencies.

1.0 (2009-07-05)
================

- Retested and added some content to GAE tutorial.

- Edited "Extending" narrative docs chapter.

- Added "Deleting the Database" section to the "Defining Models"
  chapter of the traversal wiki tutorial.

- Spell checking of narratives and tutorials.

1.0b2 (2009-07-03)